--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -18,7 +18,15 @@
   }
 }
 
+.card-body{
+  max-height: 550px;
+}
 
-/* 
+.card{
+  max-height: 500px;
+  overflow-y: scroll;
+}
+/* "
+
 .container, .container-fluid, .container-lg, .container-md, .container-xl
 */
