--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -18,11 +18,11 @@
   }
 }
 
-.card-body{
+.msg-card-body{
   max-height: 550px;
 }
 
-.card{
+.msg-card{
   max-height: 500px;
   overflow-y: scroll;
 }
